--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
     	<classifier>jdk15</classifier>
 	</dependency>
 	
+	<dependency>
+        <groupId>edu.uci.ics</groupId>
+        <artifactId>crawler4j</artifactId>
+        <version>4.3</version>
+    </dependency>
+	
   </dependencies>
   
 </project>
